Use installers/binaries instead of copy from images (#121)
Fixes

Fix markdown comments generator when build on Windows
Fix terrascan unit test case
Performance

Change way to install linters in Dockerfile (replace FROM ... COPY) by package or sh installation, to reduce the docker build steps from 93 to 87
shellcheck
editorconfig-checker
dotenv-linter
golangci-lint
kubeval

* [automation] Auto-update linters version, help and documentation

* Fix terraform_terrascan test file

* cspell

* [Mega-Linter] Apply linters fixes

* Use installers/binaries instead of copy from images

* ignore scripts on npm install

* fixes

* fix terrascan example good

* fix bash

* fix Dockerfile

* again

* againnnnn

* Rollback terrascan + fix UpdatedSourcesReporter logs

* fix flake8 lint

* downgrade terraform

* [Mega-Linter] Apply linters fixes

* rhaaaa

* go install

* rollback terrascan

* apk add libffi-dev

* Fix failing test cases

* spell

* try again

* rollback

* debug terrascan

* Fix tf tscan test

* changelog

* Fix terrascan unit test case

* fixxxx

Co-authored-by: nvuillam <nvuillam@users.noreply.github.com>

--- a/.github/workflows/deploy-DEV.yml
+++ b/.github/workflows/deploy-DEV.yml
@@ -68,6 +68,7 @@ jobs:
       # Build image locally for testing #
       ###################################
       - name: Build image
+        id: docker_build
         shell: bash
         run: docker build --build-arg "BUILD_DATE=${BUILD_DATE}" --build-arg "BUILD_REVISION=${GITHUB_SHA}" --build-arg "BUILD_VERSION=${GITHUB_SHA}" --no-cache -t nvuillam/mega-linter:${GITHUB_SHA} . | while read line ; do echo "$(date +'%H:%M:%S')| $line"; done;
         timeout-minutes: 30
@@ -110,15 +111,19 @@ jobs:
             linter-helps.json
             linter-versions.json
 
+      - name: debug
+        if: ${{ success() }} || ${{ failure() }}
+        run: echo ${{ steps.docker_build.outcome }}
+
       # Test mega-linter-runner with newly created image
       - name: Setup Node
-        if: ${{ success() }} || ${{ failure() }}
+        if: ${{ steps.docker_build.outcome }} == 'success' && (${{ success() }} || ${{ failure() }})
         uses: actions/setup-node@v2.1.2
         with:
           node-version: "12"
       - name: Install NPM dependencies
-        if: ${{ success() }} || ${{ failure() }}
+        if: ${{ steps.docker_build.outcome }} == 'success' && (${{ success() }} || ${{ failure() }})
         run: cd mega-linter-runner && sudo npm ci && sudo npm link
       - name: Run mega-linter-runner tests
-        if: ${{ success() }} || ${{ failure() }}
+        if: ${{ steps.docker_build.outcome }} == 'success' && (${{ success() }} || ${{ failure() }})
         run: cd mega-linter-runner && MEGALINTER_RELEASE=${{github.sha}} MEGALINTER_NO_DOCKER_PULL=true npm run test
