--- a/megalinter/descriptors/env.yml
+++ b/megalinter/descriptors/env.yml
@@ -9,11 +9,10 @@ linters:
     linter_repo: https://github.com/dotenv-linter/dotenv-linter
     linter_rules_url: https://dotenv-linter.github.io/#/?id=dotenv-linter
     linter_banner_image_url: https://raw.githubusercontent.com/dotenv-linter/dotenv-linter/master/logo.svg
-    cli_lint_fix_arg_name: '--fix'
+    cli_lint_fix_arg_name: "--fix"
     examples:
       - "dotenv-linter myfile.env"
       - "dotenv-linter --fix myfile.env"
     install:
       dockerfile:
-        - FROM dotenvlinter/dotenv-linter:latest as dotenv-linter
-        - COPY --from=dotenv-linter /dotenv-linter /usr/bin/
+        - RUN wget -q -O - https://raw.githubusercontent.com/dotenv-linter/dotenv-linter/master/install.sh | sh -s
