--- a/megalinter/descriptors/go.yml
+++ b/megalinter/descriptors/go.yml
@@ -31,8 +31,9 @@ linters:
       - "golangci-lint run -c .golangci.yml myfile.go"
     install:
       dockerfile:
-        - FROM golangci/golangci-lint:latest as golangci-lint
-        - COPY --from=golangci-lint /usr/bin/golangci-lint /usr/bin/
+        - |
+          RUN wget -O- -nv https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh \
+              && golangci-lint --version
     ide:
       atom:
         - name: go-plus
