--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -17,3 +17,4 @@ FILTER_REGEX_EXCLUDE: '(\.automation/test|docs/javascripts|TEMPLATES)'
 BASH_FILTER_REGEX_EXCLUDE: (lib)
 MARKDOWN_MARKDOWN_LINK_CHECK_DISABLE_ERRORS: true
 SHOW_ELAPSED_TIME: true
+EMAIL_REPORTER_EMAIL: nicolas.vuillamy@gmail.com
