File.io reporter (#129)
* File.io reporter

* +doc

* + activate file.io for own repo

* add jscpd reports in console

* Quickfix boolean values from YAML

* console reporter at first

* changelog

* fix file.io file name

* sort reporters

* fix well

* Linter fixes

* [Mega-Linter] Apply linters fixes

* last fixes

* [Mega-Linter] Apply linters fixes

Co-authored-by: nvuillam <nvuillam@users.noreply.github.com>

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -18,3 +18,4 @@ BASH_FILTER_REGEX_EXCLUDE: (lib)
 MARKDOWN_MARKDOWN_LINK_CHECK_DISABLE_ERRORS: true
 SHOW_ELAPSED_TIME: true
 EMAIL_REPORTER_EMAIL: nicolas.vuillamy@gmail.com
+FILEIO_REPORTER: true
