--- a/megalinter/descriptors/copypaste.yml
+++ b/megalinter/descriptors/copypaste.yml
@@ -13,6 +13,8 @@ linters:
     config_file_name: .jscpd.json
     cli_lint_mode: project
     cli_lint_extra_args:
+      - "--reporters"
+      - "console,html"
       - "--output"
       - "./report/copy-paste/"
     cli_lint_extra_args_after:
