--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@ repo_url: https://github.com/nvuillam/mega-linter
 edit_uri: tree/master/docs
 site_author: Nicolas Vuillamy
 # site_description-start
-site_description: Mega-Linter analyzes 37 languages, 15 formats, 16 tooling formats , abusive copy-pastes and spelling mistakes in your repository sources, generate reports in several formats, and can even apply formatting and auto-fixes with auto-generated commit or PR, to ensure all your projects are clean, whatever IDE/toolbox are used by their developers !
+site_description: Mega-Linter analyzes 38 languages, 15 formats, 16 tooling formats , abusive copy-pastes and spelling mistakes in your repository sources, generate reports in several formats, and can even apply formatting and auto-fixes with auto-generated commit or PR, to ensure all your projects are clean, whatever IDE/toolbox are used by their developers !
 # site_description-end
 copyright: Copyright &copy; 2020 <a href="https://github.com/nvuillam">Nicolas Vuillamy</a>
 google_analytics: ["G-3DM50255LC", "nvuillam.github.io/mega-linter"]
@@ -123,6 +123,9 @@ nav:
       - "RUST":
           - "index": "descriptors/rust.md"
           - "clippy": "descriptors/rust_clippy.md"
+      - "SALESFORCE":
+          - "index": "descriptors/salesforce.md"
+          - "sfdx-scanner": "descriptors/salesforce_sfdx_scanner.md"
       - "SCALA":
           - "index": "descriptors/scala.md"
           - "scalafix": "descriptors/scala_scalafix.md"
