--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -1,5 +1,3 @@
-# Disabled: not working yet
-
 name: automerge
 on:
   pull_request:
@@ -25,8 +23,9 @@ jobs:
     if: github.repository == 'nvuillam/mega-linter'
     steps:
       - name: automerge
-        uses: "pascalgn/automerge-action@v0.12.0"
         env:
           GITHUB_TOKEN: "${{ secrets.PAT }}"
           MERGE_COMMIT_MESSAGE: "pull-request-description"
           MERGE_FORKS: "false"
+        if: env.GITHUB_TOKEN != null
+        uses: "pascalgn/automerge-action@v0.12.0"
