Simplify config settings logic (#143)
* Update `build.sh` to prettify generated `search_index.json`

It will minimize line differences in `search_index.json` and will make possible to review changes.

* Update config setting: change `EXCLUDED_DIRECTORIES` logic, add `ADDITIONAL_EXCLUDED_DIRECTORIES`

- Change config setting logic: `EXCLUDED_DIRECTORIES` is now replacing original directory list instead of extending it
- Add config setting: `ADDITIONAL_EXCLUDED_DIRECTORIES` extends `EXCLUDED_DIRECTORIES` directory list

* Use r-strings to simplify writing regular expressions in python code

* Add `.editorconfig` to unify code formatting in different text editors

* Fix yaml formatting (and improve Dockerfile formatting)

* Change linter descriptor yaml schema: rename `file_contains` to `file_contains_regex`

Now it can contain only regular expressions inside

* Generate documentation

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -7,6 +7,7 @@ APPLY_FIXES: all # When active, APPLY_FIXES must also be defined as environment 
 DISABLE:
   - CLOUDFORMATION
   # - COPYPASTE # Uncomment to disable checks of abusive copy-pastes
+  - EDITORCONFIG
   # - SPELL # Uncomment to disable checks of spelling mistakes
   - TEKTON
 DISABLE_LINTERS:
