--- a/megalinter/descriptors/arm.yml
+++ b/megalinter/descriptors/arm.yml
@@ -2,8 +2,8 @@ descriptor_id: ARM
 descriptor_type: tooling_format
 file_extensions:
   - ".json"
-file_contains:
-  - "schema.management.azure.com"
+file_contains_regex:
+  - 'schema\.management\.azure\.com'
 linters:
   # ARM TTK
   - class: ArmLinter
