--- a/megalinter/descriptors/kubernetes.yml
+++ b/megalinter/descriptors/kubernetes.yml
@@ -5,10 +5,10 @@ file_extensions:
   - ".yml"
   - ".yaml"
   - ".json"
-file_contains:
-  - "apiVersion:"
-  - "kustomize.config.k8s.io"
-  - "tekton"
+file_contains_regex:
+  - 'apiVersion:'
+  - 'kustomize\.config\.k8s\.io'
+  - 'tekton'
 linters:
   # KUBEVAL
   - linter_name: kubeval
