--- a/megalinter/descriptors/tekton.yml
+++ b/megalinter/descriptors/tekton.yml
@@ -3,8 +3,8 @@ descriptor_type: tooling_format
 file_extensions:
   - ".yml"
   - ".yaml"
-file_contains:
-  - "apiVersion: tekton"
+file_contains_regex:
+  - 'apiVersion: tekton'
 linters:
   # TEKTON-LINT
   - linter_name: tekton-lint
