Rename descriptor yaml element `file_names` to `file_names_regex` (#146)

--- a/megalinter/descriptors/groovy.yml
+++ b/megalinter/descriptors/groovy.yml
@@ -5,8 +5,8 @@ file_extensions:
   - ".gvy"
   - ".gradle"
   - ".nf"
-file_names:
-  - Jenkinsfile
+file_names_regex:
+  - 'Jenkinsfile'
 linters:
   # npm-groovy-lint
   - class: GroovyNpmGroovyLintLinter
