--- a/megalinter/descriptors/dockerfile.yml
+++ b/megalinter/descriptors/dockerfile.yml
@@ -1,7 +1,7 @@
 descriptor_id: DOCKERFILE
 descriptor_type: tooling_format
-file_names:
-  - "Dockerfile"
+file_names_regex:
+  - 'Dockerfile'
 test_folder: docker
 linters:
   # dockerfilelint
