--- a/.github/workflows/automerge-dependabot.yml
+++ b/.github/workflows/automerge-dependabot.yml
@@ -34,7 +34,7 @@ jobs:
         id: wait-for-build
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          checkName: Deploy Docker Image - DEV
+          checkName: Tests + Deploy Docker Image - DEV
           ref: ${{ github.event.pull_request.head.sha || github.sha }}
 
       - name: Wait for CI/CT/CD to succeed pt2
@@ -42,7 +42,7 @@ jobs:
         id: wait-for-ci
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          checkName: Stack linter
+          checkName: Mega-Linter
           ref: ${{ github.event.pull_request.head.sha || github.sha }}
 
       - name: merge
