--- a/.github/workflows/test-mega-linter-runner.yml
+++ b/.github/workflows/test-mega-linter-runner.yml
@@ -3,9 +3,9 @@ name: "Test mega-linter-runner"
 on: [push, pull_request]
 
 jobs:
-  # Cancel duplicate jobs: https://github.com/fkirc/skip-duplicate-actions#option-3-cancellation-only
-  cancel_duplicates:
-    name: Cancel duplicate jobs
+  # Skip checks: https://github.com/fkirc/skip-duplicate-actions#option-3-cancellation-only
+  skip_checks:
+    name: Skip checks
     runs-on: ubuntu-latest
     steps:
       - uses: fkirc/skip-duplicate-actions@master
