--- a/megalinter/descriptors/javascript.yml
+++ b/megalinter/descriptors/javascript.yml
@@ -10,6 +10,9 @@ linters:
   # ESLINT
   - linter_name: eslint
     name: JAVASCRIPT_ES
+    file_extensions:
+      - ".js"
+      - ".vue"
     linter_text: |
       eslint requires a custom configuration file applicable to your project.
       You can create it by typing `npx eslint --init` in the root of your repository
@@ -40,6 +43,7 @@ linters:
         - eslint-plugin-node
         - eslint-plugin-prettier
         - eslint-plugin-promise
+        - eslint-plugin-vue
         - babel-eslint
     ide:
       atom:
