--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -14,7 +14,7 @@ DISABLE_LINTERS:
   - BASH_SHFMT
   - DOCKERFILE_HADOLINT
   - JAVASCRIPT_STANDARD
-FILTER_REGEX_EXCLUDE: '(\.automation/test|docs/javascripts|TEMPLATES)'
+FILTER_REGEX_EXCLUDE: '(\.automation/test|docs/javascripts|docs/overrides|TEMPLATES)'
 BASH_FILTER_REGEX_EXCLUDE: (lib)
 MARKDOWN_MARKDOWN_LINK_CHECK_DISABLE_ERRORS: true
 SHOW_ELAPSED_TIME: true
