--- a/.github/workflows/deploy-RELEASE-flavors.yml
+++ b/.github/workflows/deploy-RELEASE-flavors.yml
@@ -39,15 +39,16 @@ jobs:
         flavor:
           [
             "dart",
+            "dotnet",
             "go",
             "java",
             "javascript",
-            "microsoft",
             "php",
             "python",
             "ruby",
             "rust",
             "scala",
+            "terraform",
           ]
     if: github.repository == 'nvuillam/mega-linter'
     ##################
