Doc again + build automation (#163)
- Dynamically generate (build.py) the list of flavors in github actions workflows
- Reorganize online documentation menus

---

* Update online doc menu

* Build

* Update flavors sub menus

* Update gha YML with flavors

* Linter fix & changelog

* Lint fix

--- a/.github/workflows/deploy-PROD-flavors.yml
+++ b/.github/workflows/deploy-PROD-flavors.yml
@@ -46,6 +46,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
+        # flavors-start
         flavor:
           [
             "dart",
@@ -60,6 +61,7 @@ jobs:
             "scala",
             "terraform",
           ]
+# flavors-end
     # Only run this on the main repo
     if: github.repository == 'nvuillam/mega-linter'
     ##################
